<resources>
    <string name="app_name">Android-Killer-Croc</string>

    <string name="sopt">SOPT</string>
    <string name="name">이름</string>
    <string name="id">이이디</string>
    <string name="pw">비밀번호</string>
    <string name="name_hint">이름을 입력해주세요.</string>
    <string name="id_hint">아이디를 입력해주세요.</string>
    <string name="pw_hint">비밀번호를 입력해주세요.</string>
    <string name="login">LOGIN</string>
    <string name="signup">회원가입</string>
    <string name="signup_finish">회원가입 완료</string>

    <string name="scroll">안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n안녕하세요 이강민입니다 만나서 반가워요~\n</string>
</resources>